...
            snackbarHostState = SnackbarHostState(),
        ) {}
    }
}

internal object AlbumListScreenTestTags {
    const val PAGING_PROGRESS_INDICATOR = "PAGING_PROGRESS_INDICATOR"
    const val ALBUM_LIST_LAZY_COLUMN = "ALBUM_LIST_LAZY_COLUMN"
}

